Se hacen ajustes para que compile e proyecto

--- a/src/demo-app/tsconfig.json
+++ b/src/demo-app/tsconfig.json
@@ -1,17 +1,27 @@
 {
   "compilerOptions": {
-    "declaration": false,
+    "declaration": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "lib": ["es6", "dom"],
-    "mapRoot": "./",
-    "module": "es6",
+    "lib": ["es6", "es2015", "dom"],
+    "mapRoot": "/",
+    "module": "commonjs",
     "moduleResolution": "node",
-    "outDir": "../dist/out-tsc",
+    "outDir": "../../dist",
     "sourceMap": true,
     "target": "es5",
     "typeRoots": [
       "../node_modules/@types"
-    ]
+    ],
+    "paths": {
+      "ng2-flex": [
+        "../../dist/ng2-flex"
+      ]
+    }
+  },
+  "angularCompilerOptions": {
+    "genDir": "../../dist",
+    "skipTemplateCodegen": true,
+    "debug": true
   }
 }
