--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/minimist": "^1.1.28",
     "@types/node": "^6.0.34",
     "@types/run-sequence": "0.0.27",
+    "codelyzer": "1.0.0-beta.1",
     "browserstacktunnel-wrapper": "^2.0.0",
     "conventional-changelog": "^1.1.0",
     "express": "^4.14.0",
