--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "deploy": "firebase deploy",
     "webdriver-manager": "webdriver-manager"
   },
-  "version": "0.6.0",
+  "version": "1.0.0-alpha.1",
   "license": "MIT",
   "engines": {
     "node": ">= 5.4.1 < 7"
