--- a/src/lib/package.json
+++ b/src/lib/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "https://github.com/santoro-mariano/ng2-flex"
   },
-  "version": "0.6.0",
+  "version": "1.0.0-alpha.1",
   "license": "MIT",
   "dependencies": {
     "@angular/common": "~2.1.0",
